MODE-872 - Added back into build cycle & fixed tests for web-jcr-rest-client module.
The following were updated
- cargo plugin version and general cargo usage has been refactored: the parent pom defines & configures the default cargo plugin while the child modules only use that configuration
- the cargo plugin & configuration have been updated to work with the latest version of the plugin & Jetty has been upgraded to 7x
- the JcrResources web service, on the @Delete method, does not need the @Consumed annotation