@@ -8,6 +8,7 @@
         <version>3.0-SNAPSHOT</version>
         <relativePath>../../modeshape-parent</relativePath>
     </parent>
+
     <artifactId>modeshape-web-jcr-rest-war</artifactId>
     <packaging>war</packaging>
     <name>ModeShape JCR REST Servlet</name>
@@ -17,15 +18,6 @@
         <dependency>
             <groupId>org.modeshape</groupId>
             <artifactId>modeshape-web-jcr-rest</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
 
         <dependency>
@@ -47,6 +39,16 @@
             <groupId>org.modeshape</groupId>
             <artifactId>modeshape-unit-test</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>resources</finalName>
@@ -72,45 +74,6 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-                <version>${maven.codehaus.cargo.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>start-container</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <skip>${skipTests}</skip>
-                    <container>
-                        <containerId>${cargo.container}</containerId>
-                        <systemProperties>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                        </systemProperties>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <cargo.jvmargs>-XX:PermSize=128m -XX:MaxPermSize=512 -XX:+UseConcMarkSweepGC
-                                -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled
-                            </cargo.jvmargs>
-                            <cargo.logging>low</cargo.logging>
-                            <cargo.servlet.users>dnauser:password:connect,readwrite|unauthorized:password:bogus
-                            </cargo.servlet.users>
-                            <cargo.servlet.port>8090</cargo.servlet.port>
-                        </properties>
-                        <home>${project.build.directory}/cargo</home>
-                    </configuration>
-                    <wait>false</wait>
-                </configuration>
             </plugin>
             <!--
                    Override the default Surefire behavior to run during
