@@ -52,45 +52,6 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-                <version>${maven.codehaus.cargo.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>start-container</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <skip>${skipTests}</skip>
-                    <container>
-                        <containerId>${cargo.container}</containerId>
-                        <systemProperties>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                        </systemProperties>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <cargo.jvmargs>-XX:PermSize=128m -XX:MaxPermSize=512 -XX:+UseConcMarkSweepGC
-                                -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled
-                            </cargo.jvmargs>
-                            <cargo.logging>low</cargo.logging>
-                            <cargo.servlet.users>dnauser:password:connect,readwrite|unauthorized:password:bogus
-                            </cargo.servlet.users>
-                            <cargo.servlet.port>8090</cargo.servlet.port>
-                        </properties>
-                        <home>${project.build.directory}/cargo</home>
-                    </configuration>
-                    <wait>false</wait>
-                </configuration>
             </plugin>
             <!--
                    Override the default Surefire behavior to run during
